objects/BankAccount__c.object
<CustomObject>
    <fields>
        <fullName>Account_Nick_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Nick Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BankAccount</relationshipLabel>
        <relationshipName>BankAccount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show whether the Bank Account is Active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_For_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved_For_Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Id__c</fullName>
        <description>Unqiue ID for every bank account number Dama processor generates</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Account Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_account_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank account number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_routing_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank routing number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dama_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dama Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>This is a Unique Id to store the Id of the external system when mapping back.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OAC_Wallet_ID__c</fullName>
        <label>OAC Wallet ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor Product</label>
        <referenceTo>Program_Product__c</referenceTo>
        <relationshipLabel>BankAccount</relationshipLabel>
        <relationshipName>BankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>BankAccount</relationshipLabel>
        <relationshipName>BankAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update_Required</label>
        <type>Checkbox</type>
    </fields>
    <label>BankAccount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BankAccount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>